--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,11 +19,11 @@ INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
 
 FILE(GLOB_RECURSE TYPED_STRING_SRC_LIST ${CMAKE_SOURCE_DIR}/src/*.cpp)
 
-add_library(${CMAKE_PROJECT_NAME} ${TYPED_STRING_SRC_LIST})
-target_include_directories(${CMAKE_PROJECT_NAME}  PUBLIC $<INSTALL_INTERFACE:include>)
-target_link_libraries(${CMAKE_PROJECT_NAME} PUBLIC nlohmann_json::nlohmann_json)
+add_library(${PROJECT_NAME} ${TYPED_STRING_SRC_LIST})
+target_include_directories(${PROJECT_NAME}  PUBLIC $<INSTALL_INTERFACE:include>)
+target_link_libraries(${PROJECT_NAME} PUBLIC nlohmann_json::nlohmann_json)
 add_executable(parse_test ${CMAKE_SOURCE_DIR}/test/parse_test.cpp)
-target_link_libraries(parse_test ${CMAKE_PROJECT_NAME})
+target_link_libraries(parse_test ${PROJECT_NAME})
 
 foreach(p LIB INCLUDE)
 	set(var CMAKE_INSTALL_${p}DIR)
@@ -33,16 +33,16 @@ foreach(p LIB INCLUDE)
 	endif()
 endforeach()
 
-export(TARGETS ${CMAKE_PROJECT_NAME}
-     FILE ${CMAKE_BINARY_DIR}/${CMAKE_PROJECT_NAME}Targets.cmake)
+export(TARGETS ${PROJECT_NAME}
+     FILE ${CMAKE_BINARY_DIR}/${PROJECT_NAME}Targets.cmake)
 
 file(WRITE
-    ${CMAKE_BINARY_DIR}/${CMAKE_PROJECT_NAME}Config.cmake
-    "include(\${CMAKE_CURRENT_LIST_DIR}/${CMAKE_PROJECT_NAME}Targets.cmake)\n")
+    ${CMAKE_BINARY_DIR}/${PROJECT_NAME}Config.cmake
+    "include(\${CMAKE_CURRENT_LIST_DIR}/${PROJECT_NAME}Targets.cmake)\n")
 
 install(FILES
-        ${CMAKE_BINARY_DIR}/${CMAKE_PROJECT_NAME}Config.cmake
-        DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${CMAKE_PROJECT_NAME})
+        ${CMAKE_BINARY_DIR}/${PROJECT_NAME}Config.cmake
+        DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME})
 
 install(TARGETS ${PROJECT_NAME} EXPORT ${PROJECT_NAME}Targets
    ARCHIVE  DESTINATION lib
@@ -51,5 +51,5 @@ install(TARGETS ${PROJECT_NAME} EXPORT ${PROJECT_NAME}Targets
 
 install(DIRECTORY ${CMAKE_SOURCE_DIR}/include/ DESTINATION include/${PROJECT_NAME})
 
-install(EXPORT ${CMAKE_PROJECT_NAME}Targets
-        DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${CMAKE_PROJECT_NAME})
+install(EXPORT ${PROJECT_NAME}Targets
+        DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME})
