更新cmake为相对根目录

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,14 +15,14 @@ endif(MSVC)
 
 FIND_PACKAGE(nlohmann_json CONFIG REQUIRED)
 
-INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
+INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
 
-FILE(GLOB_RECURSE TYPED_STRING_SRC_LIST ${CMAKE_SOURCE_DIR}/src/*.cpp)
+FILE(GLOB_RECURSE TYPED_STRING_SRC_LIST ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
 
 add_library(${PROJECT_NAME} ${TYPED_STRING_SRC_LIST})
 target_include_directories(${PROJECT_NAME}  PUBLIC $<INSTALL_INTERFACE:include>)
 target_link_libraries(${PROJECT_NAME} PUBLIC nlohmann_json::nlohmann_json)
-add_executable(parse_test ${CMAKE_SOURCE_DIR}/test/parse_test.cpp)
+add_executable(parse_test ${CMAKE_CURRENT_SOURCE_DIR}/test/parse_test.cpp)
 target_link_libraries(parse_test ${PROJECT_NAME})
 
 foreach(p LIB INCLUDE)
@@ -49,7 +49,7 @@ install(TARGETS ${PROJECT_NAME} EXPORT ${PROJECT_NAME}Targets
    LIBRARY DESTINATION lib
   )
 
-install(DIRECTORY ${CMAKE_SOURCE_DIR}/include/ DESTINATION include/${PROJECT_NAME})
+install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/ DESTINATION include/${PROJECT_NAME})
 
 install(EXPORT ${PROJECT_NAME}Targets
         DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME})
